<resources>
    <string name="app_name">ProjetoArq</string>

    <string name="sValorSaque">Digite o valor do saque</string>
    <string name="sBotaoSacar">Efetuar Saque</string>
    <string name="title_activity_display_message">Mostra a Mensagem</string>

    <string name="sDataInicio">Data inicial</string>
    <string name="sDataFim">Data Final</string>
    <string name="sBotaoConsultar">Consultar</string>
    <string name="sDataExtrato">Digite o periodo do extrato</string>

    <string name="r7Dias">7 Dias</string>
    <string name="r15Dias">15 Dias</string>

    <string name="sNumBanco">Nº Banco</string>
    <string name="sNumAgencia">Nº Agencia</string>
    <string name="sNumConta">Nº Conta</string>
    <string name="sSenha">Senha</string>
    <string name="sLogar">Logar</string>

    <string name="bSacar">Sacar</string>
    <string name="bConsultarExtrato">Consultar Extrato</string>
    <string name="sMenu">Menu</string>

    <string name="bFinalizar">Finalizar</string>

    <string name="bSair">Sair</string>
    <string name="bCancelar">Cancelar</string>

    <string name="sResultadoExtrato">Resultado Extrato</string>
    <string name="sResultadoSaque">Resultado Saque</string>
</resources>
