<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaExtrato"
    android:weightSum="1">


    <TextView
        android:textSize="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sDataExtrato"
        android:layout_weight="0.06" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/dataInicio"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:hint="@string/sDataInicio" />
    <EditText
        android:id="@+id/dataFim"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:hint="@string/sDataFim" />
        </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/r7Dias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r7Dias"/>
        <RadioButton
            android:id="@+id/r15Dias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r15Dias"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sBotaoConsultar"
            android:onClick="sendMessage"/>

    </LinearLayout>

</LinearLayout>
