<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.usjt.arqdsis.projetoarq.TelaLogin">

    <EditText
        android:id="@+id/numBanco"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/sNumBanco"
        android:layout_gravity="center"
        android:gravity="center"/>
    <EditText
        android:id="@+id/numAgencia"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/sNumAgencia"
        android:layout_gravity="center"
        android:gravity="center"/>
    <EditText
        android:id="@+id/numConta"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/sNumConta"
        android:layout_gravity="center"
        android:gravity="center"/>
    <EditText
        android:id="@+id/senha"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/sSenha"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sLogar"
            android:onClick=""/>
    </LinearLayout>
</LinearLayout>
