<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.usjt.arqdsis.projetoarq.TelaMenu">

    <TextView
    android:textSize="28dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/sMenu"
    android:layout_weight="0.00"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/bSacar" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/bConsultarExtrato" />
    </LinearLayout>

</LinearLayout>
